     ignore any useful reports, and that we successfully use reasonably many
     of the existing mappings. Suggest how user can help improve the driver
     if too few data points were seen. [#3082, #3095]
   * `openups-hid` had `nobattery` definition inverted, causing alarms -- now
     fixed to use the same mapping helper as other subdrivers. [issue #3246]

 - `upsd` data server updates:
   * Sometimes "Data for UPS [X] is stale" and "UPS [X] data is no longer
     stale" messages were logged in the same second, especially no busy
     systems. Now we allow one more second on top of `MAXAGE` setting to
     declare the device dead, just in case fractional/whole second rounding
     comes into play and breaks things. [issue #661]

 - `upsdrvctl` tool updates:
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]

 - `upslog` tool updates:
   * Updated `help()` and failure messages to suggest `-m '*,-'` for logging
     of all known local devices to stdout. [#3083, #2756]

 - `upsmon` client updates:
   * The `SHUTDOWNEXIT` option was not handled properly, and the requested
     long delays did not happen in practice. [issues #2133 and #3084, PR #3086]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * Introduced a `SHUTDOWN_HOSTSYNC` notification message, to report that
     the primary `upsmon` initiated the shutdown and has some secondaries
     to wait for first. [#3084]
   * Make sure an `FSD` notification is issued for each UPS when this primary
     `upsmon` instance sets it (and does not return to usual data processing
     loop to see and report it like secondaries do). This allows a `NOTIFYCMD`
     such as `upssched` on the primary to handle the pending power outage
     (e.g. begin stopping heavy services) even while `upsmon` waits for the
     secondaries to complete their shutdowns and log out of the `upsd` data
     server. [issue #3003, PR #3110]