@@ -2183,6 +2183,7 @@ static bool_t hid_ups_walk(walkmode_t mode)
 	hid_info_t	*item;
 	double		value;
 	int		retcode;
+	int		items_succeeded = 0; /* Track successful polls to detect total failure */
 
 #if !((defined SHUT_MODE) && SHUT_MODE)
 	/* extract the VendorId for further testing */
@@ -2373,13 +2374,19 @@ static bool_t hid_ups_walk(walkmode_t mode)
 			return FALSE;
 
 		case LIBUSB_ERROR_IO:        /* I/O error */
-			/* Uh oh, got to reconnect, with a special suggestion! */
-			dstate_setinfo("driver.state", "reconnect.trying");
+			/* Some devices have firmware bugs causing transient I/O errors
+			 * on specific HID reports. Rather than triggering expensive
+			 * reconnects, skip the failing report and continue. If device
+			 * is truly disconnected, other error codes will catch it, or
+			 * all polls fail and safety check below triggers reconnect. */
+			upsdebugx(3, "Got LIBUSB_ERROR_IO on item '%s' ReportID=0x%02x - skipping",
+				item->info_type ? item->info_type : "(null)",
+				item->hiddata ? item->hiddata->ReportID : 0xFF);
 			interrupt_pipe_EIO_count++;
-			hd = NULL;
-			return FALSE;
+			continue;
 
 		case 1:
+			items_succeeded++; /* Count successful data retrieval */
 			break;	/* Found! */
 
 		case 0:
@@ -2447,6 +2454,16 @@ static bool_t hid_ups_walk(walkmode_t mode)
 				}
 			}
 		}
+	}
+
+	/* Safety check: if we got zero successful polls during update,
+	 * device may be truly disconnected (not just transient errors).
+	 * Skip this check during INIT mode where failures are expected. */
+	if (items_succeeded == 0 && (mode == HU_WALKMODE_QUICK_UPDATE || mode == HU_WALKMODE_FULL_UPDATE)) {
+		upsdebugx(1, "Got zero successful data polls - device may be disconnected");
+		dstate_setinfo("driver.state", "reconnect.trying");
+		hd = NULL;
+		return FALSE;
 	}
 
 	return TRUE;
